--- a/DumpiLogicRules/app.config
+++ b/DumpiLogicRules/app.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="DumpiLogicRules.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="DumpiLogicRules.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Autodesk.Inventor.Interop" publicKeyToken="d84147f8b4276564" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-26.0.0.0" newVersion="26.0.0.0" />
+        <assemblyIdentity name="Autodesk.Inventor.Interop" publicKeyToken="d84147f8b4276564" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-26.0.0.0" newVersion="26.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -23,4 +23,4 @@
       </setting>
     </DumpiLogicRules.Properties.Settings>
   </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
